[gd_scene load_steps=6 format=3 uid="uid://bs8hu7hbgavsu"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_a1h67"]
[ext_resource type="PackedScene" uid="uid://dx3kgp1jrfjg1" path="res://prefabs/player.tscn" id="1_qgfge"]
[ext_resource type="PackedScene" uid="uid://bj21vjmlpslnw" path="res://prefabs/enemy.tscn" id="2_jbj0u"]
[ext_resource type="PackedScene" uid="uid://bcd1smv5mithr" path="res://prefabs/hud.tscn" id="3_h7l0h"]

[sub_resource type="Curve2D" id="Curve2D_3x27u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_a1h67")
bug_scene = ExtResource("2_jbj0u")

[node name="HUD" parent="." instance=ExtResource("3_h7l0h")]

[node name="player" parent="." instance=ExtResource("1_qgfge")]
position = Vector2(119, 124)

[node name="BugTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 360)

[node name="BugPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3x27u")

[node name="BugPathLocation" type="PathFollow2D" parent="BugPath"]

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="BugTimer" to="." method="_on_bug_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
